...
                                    <constraint firstAttribute="height" constant="34" id="YlX-cR-Ef9"/>
                                    <constraint firstAttribute="width" constant="374" id="uE8-FM-Pes"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="MNm-UJ-FGW">
                                <rect key="frame" x="20" y="296" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="374" id="8yM-XX-cfp"/>
                                    <constraint firstAttribute="height" constant="34" id="vXB-OG-37j"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                </constraints>
                                <segments>
                                    <segment title="Student"/>
                                    <segment title="Staff"/>
                                </segments>
                            </segmentedControl>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="niv-EK-BVD">
                                <rect key="frame" x="20" y="338" width="374" height="34"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="374" id="84V-Jl-ORc"/>
                                    <constraint firstAttribute="height" constant="34" id="gRc-1b-H1b"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="52" id="FSr-iz-fGU"/>
                                    <constraint firstAttribute="width" constant="374" id="f33-3m-1Pw"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                <state key="normal" title="Sign In">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="signIn:" destination="YBo-SI-Hv6" eventType="touchUpInside" id="odn-6K-msi"/>
                                </connections>
                            </button>
...
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="275" id="bLr-rv-ErG"/>
                                    <constraint firstAttribute="height" constant="71" id="iYi-9m-lbh"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Sign Up with Email">
                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <segue destination="YBo-SI-Hv6" kind="show" id="aRI-yK-f7L"/>
                                </connections>
                            </button>
...
                                        <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="pMl-8A-W6S"/>
                                            <constraint firstAttribute="width" constant="100" id="yL4-sj-fNY"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <state key="normal" title="Update">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="updateTemp:" destination="rz7-FT-Jyu" eventType="touchUpInside" id="voV-4d-4ts"/>
                                        </connections>
                                    </button>
...
